Updates to the css. * background image on all pages but CFP * fixed global nav * fixed whitespace on masthead. * increased font size of body copy.

--- a/css/global.css
+++ b/css/global.css
@@ -219,10 +219,11 @@ img {
 /* Typefaces */
 /* Spacing */
 body {
-  background: url("/content/themes/kafkasummit/images/background-kafka-summit.png") no-repeat;
+  background: url("/wp-content/themes/kafkasummit/images/background-kafka-summit.png") no-repeat;
   background-position: center;
   background-size: cover;
   font-family: "PT Sans";
+  font-size: 16px;
 }
 
 h1, h2, h3 {
@@ -246,8 +247,8 @@ a:hover {
 }
 
 .slide {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
 .slide h3 {
   color: magenta;
@@ -315,7 +316,7 @@ a:hover {
 
 /*----------  Special Sections  ----------*/
 #get-updates {
-  padding-bottom: 50px;
+  padding-bottom: 18px;
   background-color: black;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.85);
 }
@@ -336,7 +337,7 @@ a:hover {
 #call-for-proposals {
   color: magenta;
   text-transform: uppercase;
-  padding-bottom: 50px;
+  padding-bottom: 18px;
 }
 
 iframe.google-form {
@@ -345,6 +346,10 @@ iframe.google-form {
 }
 iframe.google-form .ss-form-container {
   box-shadow: none;
+}
+
+body.page-id-12, body.page-id-11 {
+  background-image: none;
 }
 
 /* hubspot embedded form */
@@ -409,9 +414,12 @@ div.input input {
   font-weight: normal;
 }
 
+.nav > li > a:focus, .nav > li > a {
+  font-size: 14px;
+}
+
 .nav > li > a:focus, .nav > li > a:hover {
   color: #ff00ff;
-  font-weight: 700;
   background: transparent;
 }
 
